--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="page-header">
-        <img src="img/Jamshid Khosravi-Logo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
+        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -46,7 +46,7 @@
             <a href="mailto:Jamshid@careerfoundry.com">Jamshid@careerfoundry.com</a><br>
             <a href="mailto:Jamshid@careerfoundry.com">Contact me</a>
         </div>
-        <form action="" method="post" id="contact-form">
+        <form action="?" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">E-mail: </label>
             <input type="email" id="contact-email" required>
 
