--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
-<body>  
+<body>
     <header class="page-header">
-        <img src="img/Jamshid Khosravi-Logo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
+        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="profile">
-            <img src="img/Jamshid Khosravi.jpg" class="profile__portrait" alt="A photograph of me">
+            <img src="img/jamshidKhosravi.jpg" class="profile__portrait" alt="A photograph of me">
             <h1>Hello World!</h1>
             <p>My name is Jamshid Khosravi. I am a <span>web</span> developer from Germany.</p>
             <a href="#">Check out some of my code</a><br>
