--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="page-header">
-        <img src="img/Jamshid Khosravi-Logo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
+        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
