--- a/work.html
+++ b/work.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,16 @@
     <meta name="author" content="Jamshid Khosravi">
     <title>Jamshid Khosravi - Portfolio/works</title>
     <link rel="shortcut icon" href="img/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
+
 <body>
     <header class="page-header">
-        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
+        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi"
+            class="page-header__item logo-header">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -23,7 +27,8 @@
                     <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
                 </li>
                 <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Works</a>
+                    <a href="work.html" role="menuitem"
+                        class="navigation-list__item navigation-list__item--active">Works</a>
                 </li>
                 <li role="presentation">
                     <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
@@ -35,47 +40,64 @@
         <h1>Works</h1>
         <div class="grid">
             <div class="grid__item">
+                <h2>JavaScript App (Pokédex)</h2>
+                <p>
+                    Objective To build a small web application with HTML, CSS, and JavaScript that loads data from an
+                    external API and enables the viewing of data points in detail.
+
+                    This project is a small Pokédex app to display a list of Pokémons (150 entries). It offers the
+                    following Key Features:
+
+                    Load data from Pokémon API. View a list of 150 Pokémons. On user action (by clicking on an item),
+                    view details for that item.
+
+                    Technical Dependencies: HTML, CSS, JS, Bootstrap
+                </p>
+                <a href="#">See project on GitHub</a>
+            </div>
+            <div class="grid__item">
+                <h2>MyFlix API</h2>
+                <p>
+                    This web application will provide users with access to information about different movies,
+                    directors, and genres.
+                    Users will be able to sign up, update their personal information, and create a list of their
+                    favorite movies.
+                </p>
+                <a href="#">See project on GitHub</a>
+            </div>
+            <div class="grid__item">
+                <h2>Meet App</h2>
+                <p>
+                    This is a serverless, progressive web application (PWA) with React, which uses a test-driven
+                    development (TDD) technique.
+                    The application uses the Google Calendar API to fetch upcoming events.
+                </p>
+                <a href="#">See project on GitHub</a>
+            </div>
+            <div class="grid__item">
                 <h2>Mobile web app</h2>
                 <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                    I've created the HTML and CSS templates.
                 </p>
                 <a href="#">See project on GitHub</a>
-             </div>
-             <div class="grid__item">
-                <h2>Native MacOs Application</h2>
-                <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
-             </div>
-             <div class="grid__item">
+            </div>
+            <div class="grid__item">
                 <h2>Mobile web app</h2>
                 <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                    I've created the HTML and CSS templates.
                 </p>
                 <a href="#">See project on GitHub</a>
-             </div>
-             <div class="grid__item">
+            </div>
+            <div class="grid__item">
                 <h2>Mobile web app</h2>
                 <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                    I've created the HTML and CSS templates.
                 </p>
                 <a href="#">See project on GitHub</a>
-             </div>
-             <div class="grid__item">
-                <h2>Mobile web app</h2>
-                <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
-             </div>
-             <div class="grid__item">
-                <h2>Mobile web app</h2>
-                <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
-             </div>
+            </div>
         </div>
     </section>
     <footer class="page-footer">
@@ -88,4 +110,5 @@
     </footer>
     <script src="js/tota11y.min.js"></script>
 </body>
-    </html>
+
+</html>
