--- a/work.html
+++ b/work.html
@@ -41,6 +41,7 @@
         <div class="grid">
             <div class="grid__item">
                 <h2>JavaScript App (Pokédex)</h2>
+                <img src="img/Pokedex.png" width="200" alt="Pokedex preview">
                 <p>
                     Objective To build a small web application with HTML, CSS, and JavaScript that loads data from an
                     external API and enables the viewing of data points in detail.
@@ -53,42 +54,58 @@
 
                     Technical Dependencies: HTML, CSS, JS, Bootstrap
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/JimiKhosravi/simple-js-app">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>MyFlix API</h2>
+                <img src="img/API.jpeg" width="200" alt="API Image preview">
                 <p>
                     This web application will provide users with access to information about different movies,
                     directors, and genres.
                     Users will be able to sign up, update their personal information, and create a list of their
                     favorite movies.
+                    Technical Dependencies: JavaScript, React, React Bootstrap, Parcel.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/JimiKhosravi/myFlix-client">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>Meet App</h2>
+                <img src="img/Meet.jpg" width="200" alt="Meet App preview">
                 <p>
                     This is a serverless, progressive web application (PWA) with React, which uses a test-driven
                     development (TDD) technique.
                     The application uses the Google Calendar API to fetch upcoming events.
+                    Technical Dependencies: JavaScript, React, Google Calendar API, AWS lambda, Jest / Enzyme,
+                    Jest-Cucumber, Puppeteer, Recharts.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/JimiKhosravi/meet">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Mobile web app</h2>
+                <h2>Chat App</h2>
+                <img src="img/Chat.png" width="200" alt="Chat App preview">
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                    I've created the HTML and CSS templates.
+                    A chat app for mobile devices using React Native.
+                    The app provides users with a chat interface and options to share images and their location: A page
+                    where users can enter their name and choose a background color for the chat screen before joining
+                    the chat, a page displaying the conversation, as well as an input field and submit button.
+                    Data gets stored online and offline.
+                    Technical Dependencies: JavaScript, React Native, GiftedChat, Firebase, Expo.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/JimiKhosravi/Chat-App">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Mobile web app</h2>
+                <h2>Angular Movie App</h2>
+                <img src="img/AngularMovie.png" width="200" alt="Angular Movie App preview">
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                    I've created the HTML and CSS templates.
+                    The client-side for an application called myFlix based on existing server-side code (REST API and
+                    database),
+                    built with TypeScript/Angular.
+                    After the user creates an account, the app provides her with information about selected movies, as
+                    well as the respective directors and genres.
+                    The user can add/remove favorite movies and manage her account data.
+                    Technical Dependencies: TypeScript, Angular, Angular Material Design.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/JimiKhosravi/myFlix-Angular-client">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>Mobile web app</h2>
