--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,16 @@
     <meta name="author" content="Jamshid Khosravi">
     <title>Contact Jamshid Khosravi</title>
     <link rel="shortcut icon" href="img/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
+
 <body>
     <header class="page-header">
-        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi" class="page-header__item logo-header">
+        <img src="img/jamshidKhosraviLogo.png" alt="Personal logo of Jamshid Khosravi"
+            class="page-header__item logo-header">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -26,12 +30,13 @@
                     <a href="work.html" role="menuitem" class="navigation-list__item">Works</a>
                 </li>
                 <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+                    <a href="contact.html" role="menuitem"
+                        class="navigation-list__item navigation-list__item--active">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="contact_text">
         <div>
             <h1>Contact</h1>
         </div>
@@ -46,7 +51,7 @@
             <a href="mailto:Jamshid@careerfoundry.com">Jamshid@careerfoundry.com</a><br>
             <a href="mailto:Jamshid@careerfoundry.com">Contact me</a>
         </div>
-        <form action="?" method="post" id="contact-form">
+        <!-- <form action="?" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">E-mail: </label>
             <input type="email" id="contact-email" required>
 
@@ -56,7 +61,7 @@
             <label class="standard-label">Message: </label>
             <textarea maxlength="240" required></textarea>
             <input type="submit" value="Send message">
-          </form>
+        </form> -->
     </main>
     <footer class="page-footer">
         <p>Find me on</p>
@@ -68,4 +73,5 @@
     </footer>
     <script src="js/tota11y.min.js"></script>
 </body>
+
 </html>
