Update image size

--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
         <div class="grid">
             <div class="grid__item">
                 <h2>JavaScript App (Pokédex)</h2>
-                <img src="img/Pokedex.png" width="200" alt="Pokedex preview">
+                <img src="img/Pokedex.png" width="250" height="300" alt="Pokedex preview">
                 <p>
                     Objective To build a small web application with HTML, CSS, and JavaScript that loads data from an
                     external API and enables the viewing of data points in detail.
@@ -58,7 +58,7 @@
             </div>
             <div class="grid__item">
                 <h2>MyFlix API</h2>
-                <img src="img/API.jpeg" width="200" alt="API Image preview">
+                <img src="img/API.jpeg" width="250" height="300" alt="API Image preview">
                 <p>
                     This web application will provide users with access to information about different movies,
                     directors, and genres.
@@ -70,7 +70,7 @@
             </div>
             <div class="grid__item">
                 <h2>Meet App</h2>
-                <img src="img/Meet.jpg" width="200" alt="Meet App preview">
+                <img src="img/Meet.jpg" width="250" height="300" alt="Meet App preview">
                 <p>
                     This is a serverless, progressive web application (PWA) with React, which uses a test-driven
                     development (TDD) technique.
@@ -82,7 +82,7 @@
             </div>
             <div class="grid__item">
                 <h2>Chat App</h2>
-                <img src="img/Chat.png" width="200" alt="Chat App preview">
+                <img src="img/Chat.png" width="250" height="300" alt="Chat App preview">
                 <p>
                     A chat app for mobile devices using React Native.
                     The app provides users with a chat interface and options to share images and their location: A page
@@ -95,7 +95,7 @@
             </div>
             <div class="grid__item">
                 <h2>Angular Movie App</h2>
-                <img src="img/AngularMovie.png" width="200" alt="Angular Movie App preview">
+                <img src="img/AngularMovie.png" width="250" height="300" alt="Angular Movie App preview">
                 <p>
                     The client-side for an application called myFlix based on existing server-side code (REST API and
                     database),
